# cpp-resources

./: README.md  advice-for-beginners.md  basic-notes.MD  good_reads.md  lefticus_notes.md  other_resources.md  references-on-topics.MD  resources.md
BT/: CMakeLists.txt  README.md
BT/header/: BinaryTree.h  Node.h  Tests.h
BT/src/: BinaryTree.cpp  Main.cpp  Node.cpp  Tests.cpp
exercises/: HARD-EXERCISES.md  README.md  exercise-1.cpp  exercise-10-preliminary.cpp  exercise-2.cpp  exercise-3-unoptimized.cpp  exercise-3.cpp  exercise-4.cpp  exercise-5.cpp  exercise-5unoptimized.cpp  exercise-7-preliminary.cpp  exercise-8-preliminary.cpp  exercise-9-preliminary.cpp  hard-exercise-1-preliminary.cpp
md/: my-advice-for-beginners.md
old/md/: img.md  my-advice-for-beginners.md
old/sample-eigen/: README.md  quick_reference.txt
old/sample-eigen/src/: main.cpp
old/sample-ipopt/: .gitignore
sample-eigen/: CMakeLists.txt
sample-ipopt/: CMakeLists.txt  readme.md
sample-ipopt/src/: main.cpp
simple-bt-exercises/: README.md  exercise-001.cpp  exercise-003.cpp  exercise-003a.cpp  exercise-003b.cpp  exercise-005.cpp  exercise-007.cpp  exercise-008.cpp  exercise-009.cpp  exercise-009a.cpp  exercise-010.cpp
simple-exercises/: exercise-001.cpp  exercise-002.cpp  exercise-004.cpp  exercise-005.cpp  exercise-006.cpp
simple-recursion-exercises/: README.md  exercise-001.cpp  exercise-002.cpp  exercise-003.cpp  exercise-003sucky.cpp  exercise-004.cpp  exercise-005.cpp  exercise-006.cpp  exercise-007-okay.cpp
